--- a/drupal8docker/sync/webform.webform.diversity_resident.yml
+++ b/drupal8docker/sync/webform.webform.diversity_resident.yml
@@ -12,7 +12,87 @@ id: diversity_resident
 title: 'Diversity Resident'
 description: ''
 category: ''
-elements: "candidate:\n  '#type': select\n  '#title': Candidate\n  '#options':\n    'Elizabeth Garcia': 'Elizabeth Garcia'\n    'Lencia Beltran': 'Lencia Beltran'\n    'Challen Wright': 'Challen Wright'\n    'Mariah Isbell': 'Mariah Isbell'\n  '#required': true\nrate_the_quality_of_the_candidate_s_presentation:\n  '#type': webform_rating\n  '#title': 'Rate the quality of the candidate''s presentation'\n  '#required': true\ncomment:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\nrate_the_candidate_s_knowledge_of_special_collections_librarians:\n  '#type': webform_rating\n  '#title': 'Rate the candidate''s knowledge of special collections librarianship'\n  '#required': true\ncomment1:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\n3_rate_the_candidate_s_awareness_of_information_technologies_and:\n  '#type': webform_rating\n  '#title': 'Rate the candidate''s awareness of information technologies and ability to integrate appropriate technologies into the work setting'\n  '#required': true\ncomment2:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\nrate_the_candidate_s_knowledge_of_issues_surrounding_diversity_e:\n  '#type': webform_rating\n  '#title': 'Rate the candidate’s knowledge of issues surrounding diversity, equity, and inclusion'\n  '#required': true\ncomment3:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\nrate_the_candidate_s_ability_to_collaborate_with_randall_library:\n  '#type': webform_rating\n  '#title': 'Rate the candidate''s ability to collaborate with Randall Library faculty and staff as well as with faculty in the colleges'\n  '#required': true\ncomment4:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\nrate_the_candidate_s_communication_skills:\n  '#type': webform_rating\n  '#title': 'Rate the candidate’s communication skills'\n  '#required': true\ncomment5:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\nrate_the_candidate_s_organizational_analytical_and_problem_solvi:\n  '#type': webform_rating\n  '#title': 'Rate the candidate''s organizational, analytical and problem-solving skills'\n  '#required': true\ncomment6:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\ndoes_this_candidate_appear_to_be_able_to_perform_the_job_of_spec:\n  '#type': textarea\n  '#title': 'Does this candidate appear to be able to perform the job of Special Collections Archivist and Diversity Resident Librarian? Why or why not?'\n  '#required': true\ndid_the_candidate_answer_all_questions_to_your_satisfaction_if_n:\n  '#type': textarea\n  '#title': 'Did the candidate answer all questions to your satisfaction? If not, which questions were left unanswered?'\n  '#required': true\ndo_you_have_any_reservations_about_this_candidate_s_ability_to_s:\n  '#type': textarea\n  '#title': 'Do you have any reservations about this candidate’s ability to succeed at UNCW? If yes, explain.'\n  '#required': true\nother_comments:\n  '#type': textarea\n  '#title': 'Other Comments'"
+elements: |-
+  candidate:
+    '#type': select
+    '#title': Candidate
+    '#options':
+      'Elizabeth Garcia': 'Elizabeth Garcia'
+      'Lencia Beltran': 'Lencia Beltran'
+      'Challen Wright': 'Challen Wright'
+      'Mariah Isbell': 'Mariah Isbell'
+    '#required': true
+  rate_the_quality_of_the_candidate_s_presentation:
+    '#type': webform_rating
+    '#title': 'Rate the quality of the candidate''s presentation'
+    '#required': true
+  comment:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  rate_the_candidate_s_knowledge_of_special_collections_librarians:
+    '#type': webform_rating
+    '#title': 'Rate the candidate''s knowledge of special collections librarianship'
+    '#required': true
+  comment1:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  3_rate_the_candidate_s_awareness_of_information_technologies_and:
+    '#type': webform_rating
+    '#title': 'Rate the candidate''s awareness of information technologies and ability to integrate appropriate technologies into the work setting'
+    '#required': true
+  comment2:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  rate_the_candidate_s_knowledge_of_issues_surrounding_diversity_e:
+    '#type': webform_rating
+    '#title': 'Rate the candidate’s knowledge of issues surrounding diversity, equity, and inclusion'
+    '#required': true
+  comment3:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  rate_the_candidate_s_ability_to_collaborate_with_randall_library:
+    '#type': webform_rating
+    '#title': 'Rate the candidate''s ability to collaborate with Randall Library faculty and staff as well as with faculty in the colleges'
+    '#required': true
+  comment4:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  rate_the_candidate_s_communication_skills:
+    '#type': webform_rating
+    '#title': 'Rate the candidate’s communication skills'
+    '#required': true
+  comment5:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  rate_the_candidate_s_organizational_analytical_and_problem_solvi:
+    '#type': webform_rating
+    '#title': 'Rate the candidate''s organizational, analytical and problem-solving skills'
+    '#required': true
+  comment6:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  does_this_candidate_appear_to_be_able_to_perform_the_job_of_spec:
+    '#type': textarea
+    '#title': 'Does this candidate appear to be able to perform the job of Special Collections Archivist and Diversity Resident Librarian? Why or why not?'
+    '#required': true
+  did_the_candidate_answer_all_questions_to_your_satisfaction_if_n:
+    '#type': textarea
+    '#title': 'Did the candidate answer all questions to your satisfaction? If not, which questions were left unanswered?'
+    '#required': true
+  do_you_have_any_reservations_about_this_candidate_s_ability_to_s:
+    '#type': textarea
+    '#title': 'Do you have any reservations about this candidate’s ability to succeed at UNCW? If yes, explain.'
+    '#required': true
+  other_comments:
+    '#type': textarea
+    '#title': 'Other Comments'
 css: ''
 javascript: ''
 settings:
@@ -33,7 +113,7 @@ settings:
   form_previous_submissions: true
   form_confidential: false
   form_confidential_message: ''
-  form_remote_addr: true
+  form_disable_remote_addr: false
   form_convert_anonymous: false
   form_prepopulate: false
   form_prepopulate_source_entity: false
