--- a/drupal8docker/sync/webform.webform.humanities_librarian.yml
+++ b/drupal8docker/sync/webform.webform.humanities_librarian.yml
@@ -12,7 +12,83 @@ id: humanities_librarian
 title: 'Humanities Librarian'
 description: ''
 category: ''
-elements: "select_the_candidate:\n  '#type': select\n  '#title': 'Select the Candidate'\n  '#options':\n    'Emily Deinert': 'Emily Deinert'\n    'Cait Kennedy': 'Cait Kennedy'\n    'Eva Sclippa': 'Eva Sclippa'\n    'Kiana Webster': 'Kiana Webster'\nrate_the_quality_of_the_candidate_s_presentation_:\n  '#type': webform_rating\n  '#title': 'Rate the quality of the candidate''s presentation.'\n  '#required': true\ncomment:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\nrate_the_candidate_s_demonstrated_knowledge_of_current_and_emerg:\n  '#type': webform_rating\n  '#title': 'Rate the candidate''s demonstrated knowledge of current and emerging trends in academic library services/resources'\n  '#required': true\ncomment1:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\nrate_the_candidate_s_demonstrated_knowledge_of_research_tools_in:\n  '#type': webform_rating\n  '#title': 'Rate the candidate''s demonstrated knowledge of research tools in the humanities'\n  '#required': true\ncomment2:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\nrate_the_candidate_s_demonstrated_commitment_to_fostering_an_equ:\n  '#type': webform_rating\n  '#title': 'Rate the candidate’s demonstrated commitment to fostering an equitable and inclusive educational environment and workplace and an ability to work effectively with a diverse faculty, student, staff, and community population'\n  '#required': true\ncomment3:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\nrate_the_candidate_s_ability_to_provide_information_literacy_ins:\n  '#type': webform_rating\n  '#title': 'Rate the candidate''s ability to provide information literacy instruction, research support and collaboration, outreach, and collection development in the humanities'\n  '#required': true\ncomment4:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\nrate_the_candidate_s_demonstrated_experience_with_digital_humani:\n  '#type': webform_rating\n  '#title': 'Rate the candidate''s demonstrated experience with digital humanities methods, tools, and/or research areas'\n  '#required': true\ncomment5:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\nrate_the_candidate_s_communication_skills:\n  '#type': webform_rating\n  '#title': 'Rate the candidate''s communication skills'\n  '#required': true\ncomment6:\n  '#type': textarea\n  '#title': Comment\n  '#required': true\ndoes_this_candidate_appear_to_be_able_to_perform_the_job_of_huma:\n  '#type': textarea\n  '#title': 'Does this candidate appear to be able to perform the job of Humanities Librarian? Why or why not?'\n  '#required': true\ndid_the_candidate_answer_all_questions_to_your_satisfaction_if_n:\n  '#type': textarea\n  '#title': 'Did the candidate answer all questions to your satisfaction? If not, which questions were left unanswered?'\n  '#required': true\ndo_you_have_any_reservations_about_this_candidate_s_ability_to_s:\n  '#type': textarea\n  '#title': 'Do you have any reservations about this candidate’s ability to succeed at UNCW? If yes, explain.'\n  '#required': true"
+elements: |-
+  select_the_candidate:
+    '#type': select
+    '#title': 'Select the Candidate'
+    '#options':
+      'Emily Deinert': 'Emily Deinert'
+      'Cait Kennedy': 'Cait Kennedy'
+      'Eva Sclippa': 'Eva Sclippa'
+      'Kiana Webster': 'Kiana Webster'
+  rate_the_quality_of_the_candidate_s_presentation_:
+    '#type': webform_rating
+    '#title': 'Rate the quality of the candidate''s presentation.'
+    '#required': true
+  comment:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  rate_the_candidate_s_demonstrated_knowledge_of_current_and_emerg:
+    '#type': webform_rating
+    '#title': 'Rate the candidate''s demonstrated knowledge of current and emerging trends in academic library services/resources'
+    '#required': true
+  comment1:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  rate_the_candidate_s_demonstrated_knowledge_of_research_tools_in:
+    '#type': webform_rating
+    '#title': 'Rate the candidate''s demonstrated knowledge of research tools in the humanities'
+    '#required': true
+  comment2:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  rate_the_candidate_s_demonstrated_commitment_to_fostering_an_equ:
+    '#type': webform_rating
+    '#title': 'Rate the candidate’s demonstrated commitment to fostering an equitable and inclusive educational environment and workplace and an ability to work effectively with a diverse faculty, student, staff, and community population'
+    '#required': true
+  comment3:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  rate_the_candidate_s_ability_to_provide_information_literacy_ins:
+    '#type': webform_rating
+    '#title': 'Rate the candidate''s ability to provide information literacy instruction, research support and collaboration, outreach, and collection development in the humanities'
+    '#required': true
+  comment4:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  rate_the_candidate_s_demonstrated_experience_with_digital_humani:
+    '#type': webform_rating
+    '#title': 'Rate the candidate''s demonstrated experience with digital humanities methods, tools, and/or research areas'
+    '#required': true
+  comment5:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  rate_the_candidate_s_communication_skills:
+    '#type': webform_rating
+    '#title': 'Rate the candidate''s communication skills'
+    '#required': true
+  comment6:
+    '#type': textarea
+    '#title': Comment
+    '#required': true
+  does_this_candidate_appear_to_be_able_to_perform_the_job_of_huma:
+    '#type': textarea
+    '#title': 'Does this candidate appear to be able to perform the job of Humanities Librarian? Why or why not?'
+    '#required': true
+  did_the_candidate_answer_all_questions_to_your_satisfaction_if_n:
+    '#type': textarea
+    '#title': 'Did the candidate answer all questions to your satisfaction? If not, which questions were left unanswered?'
+    '#required': true
+  do_you_have_any_reservations_about_this_candidate_s_ability_to_s:
+    '#type': textarea
+    '#title': 'Do you have any reservations about this candidate’s ability to succeed at UNCW? If yes, explain.'
+    '#required': true
 css: ''
 javascript: ''
 settings:
@@ -33,7 +109,7 @@ settings:
   form_previous_submissions: true
   form_confidential: false
   form_confidential_message: ''
-  form_remote_addr: true
+  form_disable_remote_addr: false
   form_convert_anonymous: false
   form_prepopulate: false
   form_prepopulate_source_entity: false
